RESOLVED FIXED142623
PDFs don't snapshot properly in iOS Safari
https://bugs.webkit.org/show_bug.cgi?id=142623
Summary PDFs don't snapshot properly in iOS Safari
Ian Henderson
Reported 2015-03-12 08:15:04 PDT
PDFs show up as blank white tabs in iOS Safari's tab view. That's because we don't snapshot custom content views in WKWebView.
Attachments
patch (2.96 KB, patch)
2015-03-12 08:36 PDT, Ian Henderson
no flags
patch w/ corrected changelog (2.94 KB, patch)
2015-03-12 08:38 PDT, Ian Henderson
no flags
Ian Henderson
Comment 1 2015-03-12 08:36:34 PDT
Ian Henderson
Comment 2 2015-03-12 08:38:40 PDT
Created attachment 248518 [details] patch w/ corrected changelog
WebKit Commit Bot
Comment 3 2015-03-12 10:27:57 PDT
Comment on attachment 248518 [details] patch w/ corrected changelog Clearing flags on attachment: 248518 Committed r181443: <http://trac.webkit.org/changeset/181443>
WebKit Commit Bot
Comment 4 2015-03-12 10:28:00 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 5 2015-03-13 11:43:39 PDT
David Kilzer (:ddkilzer)
Comment 6 2015-03-13 11:43:52 PDT
Thanks Ian!
Ian Henderson
Comment 7 2015-03-14 02:18:04 PDT
Thank *you* (and dbates specifically I suppose) for supporting the public simulator (which made it so I could actually test this change).
Note You need to log in before you can comment on or make changes to this bug.