PDFs don't snapshot properly in iOS Safari https://bugs.webkit.org/show_bug.cgi?id=142623

Patch by Ian Henderson <ian@ianhenderson.org> on 2015-03-12
Reviewed by Tim Horton.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _snapshotRect:intoImageOfWidth:completionHandler:]):
If we have a _customContentView, use UIView snapshotting instead of
trying to snapshot the web page.

Canonical link: https://commits.webkit.org/160655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181443 268f45cc-cd09-0410-ab3c-d52691b4dbfc